syntax = "proto3";

package chremoas.roles;

import "common.proto";

service Filters {
    rpc GetFilters (NilMessage) returns (FilterList) {};
    rpc AddFilter (Filter) returns (NilMessage) {};
    rpc RemoveFilter (Filter) returns (NilMessage) {};

    rpc GetMembers (Filter) returns (MemberList) {};
    rpc AddMembers (Members) returns (NilMessage) {};
    rpc RemoveMembers (Members) returns (NilMessage) {};
}

message FilterList {
    repeated Filter FilterList = 1;
}

message Filter {
    string Name = 1;
    string Description = 2;
}

message Members {
    repeated string Name = 1;
    string Filter = 2;
}

message MemberList {
    repeated string Members = 1;
}
